syntax = "proto3";

package rolodexpb;

import "repo.proto";

service Rolodex {
  rpc GetOwners(GetOwnersRequest) returns (GetOwnersResponse) {}
}

message GetOwnersRequest {
  redpb.Repository repository = 1;
}

message GetOwnersResponse {
  repeated Team teams = 1;
}

message Team {
  string name = 1;
  SlackChannel slack_channel = 2;
}

message SlackChannel {
  string team = 1;
  string name = 2;
}
